# poly-cpp

./: .clang-format  .gitignore  .gitmodules  README.md  _build.sh  _clean.sh  _configure.sh  _plot.sh  all_cat_plot.sh  all_plot.sh  asm_prettify.sh  bench_prettify.sh  benchmark.cpp  benchmark.sh  benchmark_custom.cpp  benchmark_custom_enum.cpp  benchmark_custom_oop.cpp  benchmark_custom_visit.cpp  compile_commands.json  gen_bench.sh  generate_docs.sh  join.sh  meson.build  meson_fmt.sh  new_poly.sh  plot.sh  poly_list.sh  regen.sh  regen_all_poly.sh  regex_plot.sh  rplot.sh  run_main.sh  start.sh  to_lib.sh  wregex_plot.sh
benchmarks/: meson.build
benchmarks/include/: common.h
benchmarks/src/: benchmark_google.cpp  benchmark_tr18015.cpp  benchmark_tr18015_enum.cpp  benchmark_tr18015_oop.cpp  benchmark_tr18015_visit.cpp  common.cpp
common/: bench.cpp  bench.h  meson.build  types.h
common/include/: lib.h
common/src/: lib.cpp  main.cpp
enum/: README.md  benchmark.cpp  dev_algo.cpp  dev_algo.h  dev_base.h  dev_ctx.cpp  dev_ctx.h  dev_factory.cpp  dev_factory.h  dev_impl.cpp  dev_impl.h  meson.build  user.cpp  user_simple.cpp
enum/include/: dev_algo.h  dev_base.h  dev_ctx.h  dev_factory.h  dev_impl.h
enum/src/: dev_algo.cpp  dev_ctx.cpp  dev_factory.cpp  dev_impl.cpp  user.cpp  user_simple.cpp
enum_type/: README.md  bench.cpp  enum.plantuml  meson.build.v2  plantuml
enum_type/include/: dev_algo.h  dev_algo.h_  dev_base.h  dev_ctx.h  dev_ctx.h_  dev_factory.h_  dev_impl.h  dev_impl.h_  lib.h
enum_type/src/: dev_ctx.cpp_  dev_factory.cpp_  dev_impl.cpp_  lib.cpp  main.cpp  user.cpp  user.cpp_  user_simple.cpp  user_simple.cpp_
oop/: bench.cpp  dev_base.h  dev_ctx.cpp  dev_ctx.h  dev_factory.h  dev_impl.cpp  dev_impl.h  meson.build  meson.build.v1  meson.build.v2  user.cpp
oop/include/: dev_base.h  dev_ctx.h  dev_ctx.h_  dev_factory.h  dev_factory.h_  dev_impl.h  dev_impl.h_  lib.h
oop/src/: dev_ctx.cpp  dev_ctx.cpp_  dev_factory.cpp  dev_factory.cpp_  dev_impl.cpp  dev_impl.cpp_  lib.cpp  main.cpp  user.cpp  user.cpp_
strategy/: bench.cpp  dev_algo.h  dev_base.h  dev_ctx.cpp  dev_impl.h  meson.build  meson.build.v1  meson.build.v2  user.cpp
strategy/include/: dev_algo.h  dev_algo.h_  dev_base.h  dev_ctx.h  dev_ctx.h_  dev_factory.h  dev_factory.h_  dev_impl.h  dev_impl.h_  lib.h
strategy/src/: dev_algo.cpp  dev_algo.cpp_  dev_ctx.cpp  dev_ctx.cpp_  dev_factory.cpp  dev_factory.cpp_  dev_impl.cpp  dev_impl.cpp_  lib.cpp  main.cpp  user.cpp  user.cpp_
type_erasure_up/: README.md  bench.cpp  dev_algo.h  dev_base.h  dev_ctx.cpp  dev_ctx.h  dev_factory.cpp  dev_impl.h  meson.build  meson.build.v1  meson.build.v2  type_erasue_up.plantuml  user.cpp
type_erasure_up/docexcl_examples/: main_ex_sp.cpp  main_ex_sp2.cpp  main_ex_sp2_scale.cpp  main_ex_up.cpp  main_ex_up2.cpp
type_erasure_up/examples/: main_ex_up.cpp
type_erasure_up/include/: dev_algo.h  dev_algo.h_  dev_base.h  dev_ctx.h  dev_ctx.h_  dev_factory.h  dev_factory.h_  dev_impl.h  lib.h
type_erasure_up/src/: dev_algo.cpp  dev_algo.cpp_  dev_ctx.cpp  dev_ctx.cpp_  dev_factory.cpp  dev_factory.cpp_  dev_impl.cpp  dev_impl.cpp_  lib.cpp  main.cpp  user.cpp  user.cpp_
variant_t/: bench.cpp  dev_algo.h  dev_ctx.h  dev_impl.h  meson.build  meson.build.v2  plantuml  user.cpp
variant_t/include/: dev_algo.h  dev_algo.h_  dev_ctx.h  dev_ctx.h_  dev_factory.h  dev_factory.h_  dev_impl.h  lib.h
variant_t/src/: dev_algo.cpp  dev_algo.cpp_  dev_ctx.cpp  dev_ctx.cpp_  dev_factory.cpp  dev_factory.cpp_  dev_impl.cpp  dev_impl.cpp_  lib.cpp  main.cpp  user.cpp  user.cpp_
visitor/: bench.cpp  dev_algo.cpp  dev_algo.h  dev_base.h  dev_ctx.cpp  dev_ctx.h  dev_factory.cpp  dev_factory.h  dev_impl.cpp  dev_impl.h  join.sh  meson.build  meson.build.v1  meson.build.v2  user.cpp
visitor/include/: dev_algo.h  dev_algo.h_  dev_base.h  dev_ctx.h  dev_ctx.h_  dev_factory.h  dev_factory.h_  dev_impl.h  dev_impl.h_  lib.h
visitor/src/: dev_algo.cpp  dev_algo.cpp_  dev_ctx.cpp  dev_ctx.cpp_  dev_factory.cpp  dev_factory.cpp_  dev_impl.cpp  dev_impl.cpp_  lib.cpp  main.cpp  user.cpp  user.cpp_
visitor_2/: dev_algo.h  dev_ctx.cpp  dev_ctx.h  dev_impl.cpp  dev_impl.h
